--- a/assets/stylesheet/scss/components/_table.scss
+++ b/assets/stylesheet/scss/components/_table.scss
@@ -1,218 +1,208 @@
 /* Custom table design. */
 .table-component {
-    margin: 100px auto 0;
-    max-width: 1140px;
-    height: 690px;
-    overflow-y: scroll;
+  margin: 100px auto 0;
+  max-width: 1140px;
+  height: 690px;
+  overflow-y: scroll;
+}
+
+table {
+  width: 100%;
+  background-color: #fff;
+  box-shadow: 2px 2px 2px 2px #fff;
+
+  th,
+  td {
+    white-space: nowrap;
+    border-bottom: 1px solid #edecf1;
+    text-align: left;
+    padding: 12px;
   }
-  
-  table {
-    width: 100%;
-    background-color: #fff;
-    box-shadow: 2px 2px 2px 2px #fff;
-  
-    th,
-    td {
-      width: 200px;
-      border-left: none;
-      border-right: none;
-      border-bottom: 1px solid #edecf1;
-      text-align: left;
-      padding: 12px;
+
+  th {
+    font-size: 12px;
+    position: sticky;
+    top: 0;
+    color: #7a8289;
+    background-color: #f9fafc;
+    z-index: 1;
+  }
+
+  .user-name {
+    font-size: 16px;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    color: #000;
+
+    img {
+      height: 36px;
+      width: 36px;
+      border-radius: 100%;
+      object-fit: cover;
+      object-position: bottom;
     }
-  
-    th {
-      font-size: 12px;
-      position: sticky;
-      top: 0;
-      color: #7a8289;
-      background-color: #f9fafc;
-      z-index: 1;
+  }
+
+  .user-role {
+    font-weight: 500;
+    display: inline-flex;
+    align-items: center;
+    font-size: 12px;
+    padding: 5px 15px;
+    border-radius: 5px;
+    gap: 5px;
+
+    &.administrator {
+      color: #1a56db;
+      background-color: #e2efff;
     }
-  
-    .user-name {
-      font-size: 16px;
-      font-weight: 500;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      color: #000;
-  
-      img {
-        height: 36px;
-        width: 36px;
-        border-radius: 100%;
-        object-fit: cover;
-        object-position: bottom;
+
+    &.viewer {
+      color: #565e6b;
+      background-color: #f3f4f6;
+    }
+
+    &.moderator {
+      color: #7d4ec6;
+      background-color: #e9ebf8;
+    }
+  }
+
+  .status {
+    align-items: center;
+    font-weight: 500;
+    color: #141726;
+
+    .status-icon {
+      height: 10px;
+      width: 10px;
+      border-radius: 50%;
+      display: inline-block;
+      margin-right: 5px;
+
+      &.active {
+        background-color: #07a16d;
+      }
+
+      &.inactive {
+        background-color: #f2534f;
       }
     }
-  
-    .user-role {
-      font-weight: 500;
-      display: inline-flex;
-      align-items: center;
-      font-size: 12px;
-      padding: 5px 15px;
-      border-radius: 5px;
-      gap: 5px;
-  
-      &.administrator {
-        color: #1a56db;
-        background-color: #e2efff;
-      }
-  
-      &.viewer {
-        color: #565e6b;
-        background-color: #f3f4f6;
-      }
-  
-      &.moderator {
-        color: #7d4ec6;
-        background-color: #e9ebf8;
-      }
-    }
-  
-    .status {
-      display: flex;
-      align-items: center;
-      font-weight: 500;
-      color: #141726;
-  
-      .status-icon {
-        height: 10px;
-        width: 10px;
-        border-radius: 50%;
-        display: inline-block;
-        margin-right: 5px;
-  
-        &.active {
-          background-color: #07a16d;
-        }
-  
-        &.inactive {
-          background-color: #f2534f;
-        }
-      }
-    }
-  
-    .social-profile {
-      display: flex;
-  
-      ion-icon {
-        font-size: 18px;
-        margin-right: 2px;
-  
-        &:hover {
-          cursor: pointer;
-        }
-      }
-    }
-  
-    .rating {
-      display: flex;
-      align-items: center;
-      gap: 5px;
-      color: #141726;
-  
-      .arrow-up {
-        color: #1fa779;
-      }
-  
-      .arrow-down {
-        color: #e44745;
-      }
-    }
-  
-    .last-login {
-      display: flex;
-      width: max-content;
-    }
-  
-    .more-icon {
-      font-size: 16px;
-      transform: rotate(90deg);
-      padding: 3px 5px;
-      cursor: pointer;
-  
+  }
+
+  .social-profile {
+    ion-icon {
+      font-size: 18px;
+      margin-right: 2px;
+
       &:hover {
-        background-color: #f3f3f5;
-        border-radius: 5px;
+        cursor: pointer;
       }
     }
   }
-  
-  input[id="select"] {
-    display: none;
-  }
-  
-  input[id="select"] + label {
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-    border: 2px solid #bcbcbc;
-    border-radius: 2px;
-    cursor: pointer;
-  }
-  
-  input[id="select"]:checked + label:after {
-    position: relative;
-    top: -4px;
-    left: 2px;
-    content: "\2714";
-    font-size: 14px;
-  }
-  
-  .switch {
-    position: relative;
-    display: inline-block;
-    width: 54px;
-    height: 28px;
-  
-    input {
-      opacity: 0;
-      width: 0;
-      height: 0;
+
+  .rating {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    color: #141726;
+
+    .arrow-up {
+      color: #1fa779;
     }
-  
-    .slider {
+
+    .arrow-down {
+      color: #e44745;
+    }
+  }
+
+  .more-icon {
+    font-size: 16px;
+    transform: rotate(90deg);
+    padding: 3px 5px;
+    cursor: pointer;
+
+    &:hover {
+      background-color: #f3f3f5;
+      border-radius: 5px;
+    }
+  }
+}
+
+input[id="select"] {
+  display: none;
+}
+
+input[id="select"] + label {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border: 2px solid #bcbcbc;
+  border-radius: 2px;
+  cursor: pointer;
+}
+
+input[id="select"]:checked + label:after {
+  position: relative;
+  top: -4px;
+  left: 2px;
+  content: "\2714";
+  font-size: 14px;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 54px;
+  height: 28px;
+
+  input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+    border-radius: 34px;
+
+    &:before {
       position: absolute;
-      cursor: pointer;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-color: #ccc;
+      content: "";
+      height: 20px;
+      width: 20px;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
       -webkit-transition: 0.4s;
       transition: 0.4s;
-      border-radius: 34px;
-  
-      &:before {
-        position: absolute;
-        content: "";
-        height: 20px;
-        width: 20px;
-        left: 4px;
-        bottom: 4px;
-        background-color: white;
-        -webkit-transition: 0.4s;
-        transition: 0.4s;
-        border-radius: 50%;
-      }
+      border-radius: 50%;
     }
   }
-  
-  input {
-    &:checked + .slider {
-      background-color: #2196f3;
-    }
-  
-    &:focus + .slider {
-      box-shadow: 0 0 1px #2196f3;
-  
-      &::before {
-        -webkit-transform: translateX(26px);
-        -ms-transform: translateX(26px);
-        transform: translateX(26px);
-      }
+}
+
+input {
+  &:checked + .slider {
+    background-color: #2196f3;
+  }
+
+  &:focus + .slider {
+    box-shadow: 0 0 1px #2196f3;
+
+    &::before {
+      -webkit-transform: translateX(26px);
+      -ms-transform: translateX(26px);
+      transform: translateX(26px);
     }
   }
+}
